# Eclipse

./: .gitignore  README.md  plan.md  platformio.ini
Eclipse_project/: CMakeLists.txt  Eclipse_project.pro  asteroids.cpp  asteroids.h  images.qrc  ship.cpp  ship.h  shots.cpp  shots.h  widget.cpp  widget.h  widget.ui
Eclipse_project/include/: asteroids.h  game.h  game_fwd.h  space_ship.h
Eclipse_project/src/: asteroids.cpp  game.cpp  main.cpp  space_ship.cpp
InsideArduino/: .clang_complete  .gcc-flags.json
InsideArduino/.pio/libdeps/megaatmega2560/Keyboard/: .piopm
InsideArduino/.pio/libdeps/megaatmega2560/Keyboard/src/: Keyboard.h
InsideArduino/src/: controller.cpp
PlatformIO/Projects/Eclipse/src/: main.cpp
PythomCodeSerialPort/: main.py
ReadingFromArduino/: CMakeLists.txt  main.cpp
ReadingFromPort_Cpp/ControllerWithoutLibInFolder/: CMakeLists.txt  main.cpp
ReadingFromPort_Cpp/MainController/scripts/: travis.sh
ReadingFromPort_Cpp/src_arduino/: .gitignore  .gitmodules  .travis.yml  README.md
ReadingFromPort_Cpp/src_arduino/scripts/: install_dependencies.sh
ReadingFromPort_Cpp/src_arduino/src/: main.cpp
ReadingFromPort_Python/: main.py
game_widg/: widget.cpp  widget.h  widget.ui
images/: .old_coins.png.icloud  .old_menu_buttom.png.icloud  .old_reg_asteroid.png.icloud  .old_timer.png.icloud
inside_arduino/: platformio.ini
inside_arduino/src/: controller.cpp
main_game/: CMakeLists.txt
main_game/client/: main.py
main_game/dependencies/: CMakeLists.txt
main_game/dependencies/serial/: CMakeLists.txt
main_game/dependencies/serial/.circleci/: config.yml
main_game/dependencies/serial/doc/: Doxyfile
main_game/dependencies/serial/tests/: unix_serial_tests.cc
main_game/include/: GameObject.h  God.h  Modification_store.h  asteroids.h  asteroids_presentation.h  asteroids_qt.h  bonus.h  changes.h  game.h  game_fwd.h  game_ui.h  game_window.h  god.h  main_window.h  modification_store.h  monster.h  shots.h  space_ship.h  util.h
main_game/include_in_controllers/: Key_Controller_.h  arduino.h  controllers_in.h  key_controller.h
main_game/include_leaderboard/: local_leaderboard.h
main_game/include_qt/: GameObject.h  God.h  Key_Controller_.h  Selection.h  buy_live_for_coins_window.h  controllers_in.h  error_massage_window.h  game_finish_window.h  game_object.h  game_window.h  leaderboard_ui.h  legend_window.h  local_leaderboard_ui.h  main_window.h  name_enter_qt.h  selection.h
main_game/serial-example/src/: main.cpp
main_game/server/: main.cpp
main_game/src/: God.cpp  Modification_store.cpp  asteroids.cpp  asteroids_qt.cpp  bonus.cpp  controllers_in.cpp  game.cpp  game_ui.cpp  game_window.cpp  game_window.ui  god.cpp  main.cpp  main_window.cpp  main_window.h  main_window.ui  modification_store.cpp  monster.cpp  shots.cpp  space_ship.cpp  util.cpp  util_eclipse.cpp
main_game/src_arduino/: Arduino.cpp  Arduino.h  main.cpp
main_game/src_in_controllers/: Key_Controller_.cpp  arduino.cpp  key_controller.cpp  ports.cpp
main_game/src_local_leaderboard/: local_leaderboard.cpp
main_game/src_qt/: GameObject.cpp  God.cpp  Key_Controller_.cpp  Selection.cpp  Selection.ui  buy_live_for_coins_window.cpp  buy_live_for_coins_window.ui  error_massage_window.cpp  error_massage_window.ui  game_finish_window.cpp  game_finish_window.ui  game_object.cpp  game_window.cpp  game_window.ui  leaderboard_ui.cpp  legend_window.cpp  legend_window.ui  local_leaderboard_ui.cpp  local_leaderboard_ui.ui  main.cpp  main_window.cpp  main_window.ui  name_enter_qt.cpp  name_enter_qt.ui  selection.cpp  test
main_game/src_upstream_leaderboard/: client.cpp  server.cpp
main_game/test_arduino/: main.cpp
main_game/test_leaderboard/: main.cpp
main_game/upstream_leaderboard/: upstream_leaderboard.cpp  upstream_leaderboard.h
serial-example/: .gitignore  CMakeLists.txt
serial-example/cmake/: FindSerial.cmake
src/: controller.cpp  main.cpp
